# grafiti_robot

./: CMakeLists.txt  README.md  class_diagram.txt  robot.cpp  server.py  toolchain-rpi.cmake
doc/: Backlog.xlsx  KTS.docx  class_diagram.txt  conceptual_model.txt  sequence_diagram.txt  usecase_diagram.txt  ОТЧЕТ_АИС_25.docx
